add twitter login w/ passport

--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "map-attack",
+  "name": "mapattack-web",
   "version": "0.0.0",
+  "main": "server.js",
+  "scripts": {
+    "test": "grunt test",
+    "start": "grunt server"
+  },
   "dependencies": {
-    "flatiron": "~0.3.8",
-    "ecstatic": "~0.4.8",
-    "union": "~0.3.7"
+    "passport-twitter": "~1.0.2",
+    "express": "~3.4.0",
+    "passport": "~0.1.17",
+    "ejs": "~0.8.4"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -27,6 +33,30 @@
     "grunt-nodemon": "~0.1.1"
   },
   "engines": {
-    "node": ">=0.8.0"
-  }
+    "node": ">=0.10.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:geoloqi/mapattack-web.git"
+  },
+  "author": "Esri Portland R&D Center <portland@esri.com>",
+  "contributors": [
+    {
+      "name": "Patrick Arlt",
+      "email": "parlt@esri.com"
+    },
+    {
+      "name": "Nate Goldman",
+      "email": "ngoldman@esri.com"
+    },
+    {
+      "name": "Paul C. Pederson",
+      "email": "ppederson@esri.com"
+    },
+    {
+      "name": "Nikolas Wise",
+      "email": "nwise@esri.com"
+    }
+  ],
+  "license": "Apache 2.0"
 }
