--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "passport-twitter": "~1.0.2",
     "express": "~3.4.0",
     "passport": "~0.1.17",
-    "ejs": "~0.8.4"
+    "ejs": "~0.8.4",
+    "express-partials": "~0.1.1"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
