--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "~3.4.0",
     "passport": "~0.1.17",
     "ejs": "~0.8.4",
-    "express-partials": "~0.1.1"
+    "express-partials": "~0.1.1",
+    "xmlhttprequest": "~1.6.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
