--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "passport": "~0.1.17",
     "ejs": "~0.8.4",
     "express-partials": "~0.1.1",
-    "xmlhttprequest": "~1.6.0"
+    "xmlhttprequest": "~1.6.0",
+    "needle": "~0.6.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
