--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "grunt-concurrent": "~0.3.0",
     "load-grunt-tasks": "~0.1.0",
     "time-grunt": "~0.1.1",
-    "grunt-nodemon": "~0.1.1"
+    "grunt-nodemon": "~0.1.1",
+    "grunt-shell": "~0.4.0"
   },
   "engines": {
     "node": ">=0.10.0"
