--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mapattack-web",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": "server.js",
   "scripts": {
     "test": "grunt test",
-    "start": "grunt server"
+    "start": "node server.js"
   },
   "dependencies": {
     "passport-twitter": "~1.0.2",
