--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "grunt-shell": "~0.4.0"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": "0.10.x",
+    "npm": "1.2.x"
   },
   "repository": {
     "type": "git",
