--- a/app/iphone/mapattack.plist
+++ b/app/iphone/mapattack.plist
@@ -11,7 +11,7 @@
             <key>kind</key>
             <string>software-package</string>
             <key>url</key>
-            <string>http://pin13.net/mapattack/Mapattack.ipa</string>
+            <string>http://pin13.net/mapattack/MapAttack.ipa</string>
           </dict>
           <dict>
             <key>kind</key>
