--- a/app/iphone/mapattack.plist
+++ b/app/iphone/mapattack.plist
@@ -33,7 +33,7 @@
         <key>metadata</key>
         <dict>
           <key>bundle-identifier</key>
-          <string>com.esri.pdx.MapAttack</string>
+          <string>org.mapattack.ios</string>
           <key>bundle-version</key>
           <string>1.0</string>
           <key>kind</key>
